--- a/Runtime/Mixin.unity-language.Runtime.asmdef
+++ b/Runtime/Mixin.unity-language.Runtime.asmdef
@@ -5,7 +5,8 @@
         "GUID:72360ac344346684e9e27a1a126f833a",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:b708ce3d2362bc049a7fb3b1afb84301",
-        "GUID:10ebc479cc081044d87faf0f7bd87988"
+        "GUID:10ebc479cc081044d87faf0f7bd87988",
+        "GUID:fba75d1dacb48cc419eba0da9788a82e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
